fix(layout): adjust the sidebar-collapse-line style  #INFR-3939

--- a/src/layout/styles/layout.scss
+++ b/src/layout/styles/layout.scss
@@ -184,6 +184,14 @@
                 visibility: visible;
             }
         }
+        &::after {
+            width: 20px;
+            height: 100%;
+            position: absolute;
+            right: -10px;
+            top: 0;
+            content: '';
+        }
     }
 
     .sidebar-collapse {
